[package]
name = "nostrkeytool"
readme = "README.md"
version = "0.2.0"
authors = ["Daniel Cadenas"]
edition = "2021"
description = "A command-line tool for NOSTR key operations"
license = "MIT"
repository = "https://github.com/dcadenas/nostrkeytool"
keywords = ["nostr", "key", "crypto"]
categories = ["cryptography", "command-line-utilities"]
homepage = "https://github.com/dcadenas/nostrkeytool"
documentation = "https://github.com/dcadenas/nostrkeytool#readme"

exclude = [
    ".github/workflows/rust.yml",
    ".gitignore",
    "Cargo.lock",
    "Cargo.toml.orig",
    "grcov.yml"
]

[dependencies]
anyhow = "1.0"
clap = "4.4.18"
nostr-sdk = "0.27"
tokio = { version = "1", features = ["full"] }
